--- a/Plome.xcodeproj/xcshareddata/xcschemes/Plome.xcscheme
+++ b/Plome.xcodeproj/xcshareddata/xcschemes/Plome.xcscheme
@@ -62,6 +62,16 @@
             ReferencedContainer = "container:Plome.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
