--- a/Plome.xcodeproj/xcshareddata/xcschemes/Plome.xcscheme
+++ b/Plome.xcodeproj/xcshareddata/xcschemes/Plome.xcscheme
@@ -66,11 +66,11 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-FIRDebugEnabled"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-FIRAnalyticsDebugEnabled"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
