refacto: sharing with activity controller instead of displaying code

--- a/Plome/Info.plist
+++ b/Plome/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>UrbaneRounded-Light.ttf</string>
